tests/sksl/errors/ReservedNameTemplate.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'template'
1 error
